# web-push-notification

./: .dockerignore  .gitignore  .gitpod.yml  Makefile  docker-compose.dev.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/: config.py  endpoint.py  main.py  schema.py  service.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: sw.js
frontend/src/: App.js  helper.js  setupProxy.js
