[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Carol <awdrg1210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pywebpush = "^1.14.0"
colorlog = "^6.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
